--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     />
     <title>React App</title>
     <script defer src="/bundle.js"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
